@@ -1,7 +1,6 @@
 
 * Add check for except: pass
 * Add check that when calling base class __init__(), self is first arg
-* Add check in lambda functions for module/variable use
 * Add check for multiple functions/methods/classes w/same name
 * Add check that private functions are used in module/class
 * Add check that subclass overrides method that only raises NotImplementedError
